<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_y="0sp"
    android:background="#5969F0AE"
    android:gravity="bottom|clip_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_weight="0"
        android:background="#23B5CA"
        android:backgroundTint="#40693ECF"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal|vertical"
        android:focusable="true"
        android:fontFamily="cursive"
        android:letterSpacing="0.4"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        android:shadowColor="#2C2A2A"
        android:singleLine="true"
        android:text="@string/course_dialog_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:autoSizeTextType="uniform" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1B6F4EF"
        android:backgroundTint="#2F693ECF"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reminders"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/note_textview"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="REMINDERS" />

        <EditText
            android:id="@+id/lecturer_text"
            android:layout_width="250sp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/laalaa"
            android:inputType="textCapWords"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lecturer"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lecturer_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coursecode"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/courseCode_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />

        <EditText
            android:id="@+id/courseCode_text"
            android:layout_width="250sp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/course_hint"
            android:inputType="textCapCharacters"
            android:isScrollContainer="false"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="320dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="18dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="183dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="99dp"
                    android:layout_height="25dp"
                    android:text="@string/Unit"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/unit_text"
                    android:layout_width="48dp"
                    android:layout_height="35sp"
                    android:autofillHints=""
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/Nil"
                    android:inputType="number"
                    android:labelFor="@id/textView6"
                    android:layerType="software"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:text="@string/carryOver"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/carry_toggle"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:background="#FBFBFB"
                    android:buttonTint="#000000" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/note_textview"
            android:layout_width="320dp"
            android:layout_height="175dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:autofillHints=""
            android:background="#FBFBFB"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:gravity="start|top"
            android:hint="@string/Notes"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:background="#23B5CA"
            android:backgroundTint="#40693ECF"
            android:backgroundTintMode="multiply"
            android:fadingEdge="horizontal|vertical"
            android:shadowColor="#020202"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="50"
            android:background="#23B5CA"
            android:backgroundTint="#40693ECF"
            android:fadingEdge="horizontal|vertical"
            android:shadowColor="#020202"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>